# gaia-engine

./: .gitignore  README.md  pyproject.toml
gaia_engine/: __init__.py  __main__.py  adapter_surgeon.py  awareness.py  cogpacket_compressor.py  config.py  core.py  dissociation_scanner.py  manager.py  moe_offload.py  rome.py  sae_trainer.py  thought_composer.py  weighted_trainer.py
gaia_engine/cpp/: CMakeLists.txt  __init__.py  backend.py  gaia_cpp.cpp  hidden_state_capture.hpp
gaia_engine/lifecycle/: __init__.py  client.py  snapshot.py  states.py
tests/: test_cuda_visibility.py  test_lifecycle.py  test_sae_trainer.py
