[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-engine"
version = "1.0.0"
description = "Purpose-built inference engine for self-aware AI — subprocess isolation, KV thoughts, polygraph, LoRA, SAE, ROME"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Azrael", email = "azrael@gaia.local"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.7",
    "transformers>=5.5.0",  # Gemma 4 (gemma4 model_type) support
    "accelerate",
    "peft",
    "bitsandbytes",
    "Pillow",
    "numpy",
    "safetensors",
    "sentencepiece",
    "protobuf",
]

[project.optional-dependencies]
gptq = ["gptqmodel"]
vision = ["torchvision", "qwen-vl-utils"]
training = ["datasets", "trl"]
all = ["gaia-engine[gptq,vision,training]"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
gaia-engine = "gaia_engine.__main__:main"

[project.urls]
Homepage = "https://github.com/azraeltruthsay/gaia-engine"
Repository = "https://github.com/azraeltruthsay/gaia-engine"

[tool.setuptools.packages.find]
include = ["gaia_engine*"]

[tool.ruff]
line-length = 120
target-version = "py311"
